const grpc = require('@grpc/grpc-js');
const ProtoLoader = require('./utils/protoLoader');
const AuthService = require('./services/AuthService');
const TaskService = require('./services/TaskService');
const database = require('./database/database');
const { safe } = require('./utils/grpc');
const ChatService = require('./services/ChatService'); // + ChatService

/**
 * Servidor gRPC
 * 
 * Implementa comunica√ß√£o de alta performance usando:
 * - Protocol Buffers para serializa√ß√£o eficiente
 * - HTTP/2 como protocolo de transporte
 * - Streaming bidirecional para tempo real
 */

class GrpcServer {
    constructor() {
        this.server = new grpc.Server();
        this.protoLoader = new ProtoLoader();
        this.authService = new AuthService();
        this.taskService = new TaskService();
        this.chatService = new ChatService();
    }

    async initialize() {
        try {
            // Inicializar banco de dados
            await database.init();

            // Carregar defini√ß√µes dos protobuf
            const authProto = this.protoLoader.loadProto('auth_service.proto', 'auth');
            const taskProto = this.protoLoader.loadProto('task_service.proto', 'tasks');
            const chatProto = this.protoLoader.loadProto('chat_service.proto', 'chat'); // + chat


            // Registrar servi√ßos de autentica√ß√£o
            this.server.addService(authProto.AuthService.service, {
                Register: safe(this.authService.register.bind(this.authService)),
                Login: safe(this.authService.login.bind(this.authService)),
                ValidateToken: safe(this.authService.validateToken.bind(this.authService))
            });

            // Registrar servi√ßos de tarefas
            this.server.addService(taskProto.TaskService.service, {
                CreateTask: safe(this.taskService.createTask.bind(this.taskService)),
                GetTasks: safe(this.taskService.getTasks.bind(this.taskService)),
                GetTask: safe(this.taskService.getTask.bind(this.taskService)),
                UpdateTask: safe(this.taskService.updateTask.bind(this.taskService)),
                DeleteTask: safe(this.taskService.deleteTask.bind(this.taskService)),
                GetTaskStats: safe(this.taskService.getTaskStats.bind(this.taskService)),
                StreamTasks: this.taskService.streamTasks.bind(this.taskService),
                StreamNotifications: this.taskService.streamNotifications.bind(this.taskService)
            });

            this.server.addService(chatProto.ChatService.service, {
                SendMessage: this.chatService.sendMessage.bind(this.chatService),
                ReceiveMessages: this.chatService.receiveMessages.bind(this.chatService)
            });

            console.log('‚úÖ Servi√ßos gRPC registrados com sucesso');
        } catch (error) {
            console.error('‚ùå Erro na inicializa√ß√£o:', error);
            throw error;
        }
    }

    async start() {
        try {
            await this.initialize();

            const port = process.env.GRPC_PORT || 50051; // respeita vari√°vel de ambiente
            const serverCredentials = grpc.ServerCredentials.createInsecure();

            this.server.bindAsync(`0.0.0.0:${port}`, serverCredentials, (error, boundPort) => {
                if (error) {
                    console.error('‚ùå Falha ao iniciar servidor:', error);
                    process.exit(1);
                }

                this.server.start();
                console.log('üöÄ =================================');
                console.log(`üöÄ Servidor gRPC iniciado na porta ${boundPort}`);
                console.log(`üöÄ Protocolo: gRPC/HTTP2`);
                console.log(`üöÄ Serializa√ß√£o: Protocol Buffers`);
                console.log('üöÄ Servi√ßos dispon√≠veis:');
                console.log('üöÄ   - AuthService (Register, Login, ValidateToken)');
                console.log('üöÄ   - TaskService (CRUD + Streaming)');
                console.log('üöÄ =================================');
            });

            // Graceful shutdown
            process.on('SIGINT', () => {
                console.log('\n‚è≥ Encerrando servidor...');
                this.server.tryShutdown((error) => {
                    if (error) {
                        console.error('‚ùå Erro ao encerrar servidor:', error);
                        process.exit(1);
                    } else {
                        console.log('‚úÖ Servidor encerrado com sucesso');
                        process.exit(0);
                    }
                });
            });

        } catch (error) {
            console.error('‚ùå Falha na inicializa√ß√£o do servidor:', error);
            process.exit(1);
        }
    }
}

// Inicializa√ß√£o direta
if (require.main === module) {
    const server = new GrpcServer();
    server.start();
}

module.exports = GrpcServer;
